[package]
name = "reqores-client-surf"
version = "0.1.2"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/reqores"
license = "MIT"
description = "reqores client implementation with surf"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqores = { path = "../reqores", version = "0.1" }
surf = "2"
