[package]
name = "reqores-client-surf"
version = "0.1.3"
edition = "2021"
authors = ["RanolP <public.ranolp@gmail.com"]
repository = "https://github.com/bot-any/reqores"
license = "MIT"
description = "reqores client implementation with surf"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqores = { path = "../reqores", version = "0.1" }
surf = { version = "2", default-features = false }

[features]
default = ["curl-client", "middleware-logger", "encoding"] 
curl-client = ["surf/curl-client"]
h1-client = ["surf/h1-client"]
h1-client-rustls = ["surf/h1-client-rustls"]
hyper-client = ["surf/hyper-client"]
wasm-client = ["surf/wasm-client"]
middleware-logger = ["surf/middleware-logger"]
encoding = ["surf/encoding"]
